Archive2/18/eac1b542d09768/output
main.cpp:24:1: error: static assertion failed: !2
 static_assert(std::is_same<boost::mpl::deref<boost::mpl::begin<v1_t>>::type, W<int>>::value, "!2");
 ^
main.cpp:25:1: error: static assertion failed: !3
 static_assert(boost::mpl::equal<v1_t, boost::mpl::vector<W<int>, W<float>>>::value, "!3");
 ^
